--- a/src/DSFMLC/Window/CMakeLists.txt
+++ b/src/DSFMLC/Window/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SRCROOT ${PROJECT_SOURCE_DIR}/Window)
+set(SRCROOT ${PROJECT_SOURCE_DIR}/src/DSFMLC/Window)
 
 # all source files
 set(SRC
@@ -29,4 +29,4 @@ set(SRC
 source_group("" FILES ${SRC})
 
 #build only object files that can be linked into a d static library
-add_library(dsfmlc-window OBJECT ${SRC})
+add_library(dsfmlc-window STATIC ${SRC})
