--- a/src/DSFMLC/Audio/CMakeLists.txt
+++ b/src/DSFMLC/Audio/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SRCROOT ${PROJECT_SOURCE_DIR}/Audio)
+set(SRCROOT ${PROJECT_SOURCE_DIR}/src/DSFMLC/Audio)
 
 # all source files
 set(SRC
@@ -25,4 +25,4 @@ set(SRC
 source_group("" FILES ${SRC})
 
 #build only object files that can be linked into a d static library
-add_library(dsfmlc-audio OBJECT ${SRC})
+add_library(dsfmlc-audio STATIC ${SRC})
